gitops/overlays/prod/app-route-custom.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: daddy-app-aballeh
  labels:
    app: daddy-app
spec:
  host: aballeh.com
  to:
    kind: Service
    name: daddy-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: daddy-app-www
  labels:
    app: daddy-app
spec:
  host: www.aballeh.com
  to:
    kind: Service
    name: daddy-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
