gitops/overlays/prod/umami-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: umami
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: aballeh-tls
spec:
  host: analytics.aballeh.com
  to:
    kind: Service
    name: umami
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
